# agent-sdk

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  features.md  project_structure.md
crates/sdk-agent/: Cargo.toml
crates/sdk-agent/src/: agent_loop.rs  agent_tool.rs  builder.rs  compaction.rs  context.rs  handle.rs  lib.rs  registry.rs  subagent.rs  subagent_tools.rs  team.rs  team_lead.rs  team_tools.rs  teammate.rs  worktree.rs
crates/sdk-cli/: Cargo.toml
crates/sdk-cli/src/: agent_dashboard.rs  cache_commands.rs  commands.rs  compaction.rs  cost.rs  display.rs  event_handler.rs  format.rs  lib.rs  main.rs  mcp.rs  mode_tools.rs  ndjson.rs  permission.rs  plan_commands.rs  session.rs  session_commands.rs  session_manager.rs  syntax.rs  tools.rs  turn.rs  ui.rs  ultra_plan_commands.rs
crates/sdk-core/: Cargo.toml
crates/sdk-core/src/: background.rs  cache.rs  config.rs  cost.rs  error.rs  events.rs  hooks.rs  lib.rs  memory.rs  prompts.rs  registry.rs  storage.rs
crates/sdk-core/src/traits/: llm_client.rs  mod.rs  prompt_builder.rs  tool.rs
crates/sdk-core/src/types/: agent_mode.rs  chat.rs  file_change.rs  memory.rs  message.rs  mod.rs  task.rs  ultra_plan.rs  usage.rs
crates/sdk-llm/: Cargo.toml
crates/sdk-llm/src/: cache_policy.rs  claude.rs  lib.rs  openai.rs  rate_limiter.rs  retry.rs  util.rs
crates/sdk-protocols/: Cargo.toml
crates/sdk-protocols/src/: lib.rs
crates/sdk-protocols/src/lsp/: client.rs  mod.rs
crates/sdk-protocols/src/mcp/: client.rs  mod.rs  stdio.rs
crates/sdk-task/: Cargo.toml
crates/sdk-task/src/: lib.rs
crates/sdk-task/src/mailbox/: broker.rs  mailbox.rs  mod.rs
crates/sdk-task/src/task/: file_lock.rs  graph.rs  mod.rs  store.rs  watcher.rs
crates/sdk-tools/: Cargo.toml
crates/sdk-tools/src/: command_tools.rs  context_tools.rs  edit_tools.rs  fs_tools.rs  glob_tools.rs  grep_tools.rs  lib.rs  lsp_tools.rs  mcp_tools.rs  memory_tools.rs  search_tools.rs  task_tools.rs  todo_tools.rs  web_tools.rs
docs/: README.md  cli.md  extending.md  getting-started.md  reference.md  single-agent.md  teams.md
examples/: multi_agent.rs  named_team.rs  single_agent.rs
src/: cache.rs  config.rs  error.rs  lib.rs  prompts.rs  storage.rs
src/agent/: agent_loop.rs  compaction.rs  context.rs  cost.rs  events.rs  handle.rs  hooks.rs  memory.rs  mod.rs  registry.rs  subagent.rs  team.rs  team_lead.rs  teammate.rs
src/cli/: cache_commands.rs  commands.rs  compaction.rs  display.rs  mod.rs  session.rs  ultra_plan_commands.rs
src/llm/: claude.rs  mod.rs  openai.rs  rate_limiter.rs  retry.rs  util.rs
src/lsp/: client.rs  mod.rs
src/mailbox/: broker.rs  mailbox.rs  mod.rs
src/mcp/: client.rs  mod.rs  stdio.rs
src/task/: file_lock.rs  graph.rs  store.rs  watcher.rs
src/tools/: builder.rs  command_tools.rs  context_tools.rs  edit_tools.rs  fs_tools.rs  glob_tools.rs  grep_tools.rs  lsp_tools.rs  mcp_tools.rs  memory_tools.rs  mermaid_tools.rs  mod.rs  registry.rs  search_tools.rs  subagent_tools.rs  team_tools.rs  todo_tools.rs  web_tools.rs
src/traits/: llm_client.rs  mod.rs  prompt_builder.rs  tool.rs
src/types/: chat.rs  file_change.rs  memory.rs  message.rs  mod.rs  task.rs  usage.rs
tests/: background_compaction.rs  hooks_cost.rs  lsp_tools.rs  mcp_client.rs  slash_commands.rs  team_goal.rs
