[package]
name = "agent-orchestrator-sdk"
version = "0.1.1"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "Rust SDK for orchestrating LLM-powered agents, shared task execution, and teammate coordination"
readme = "README.md"
documentation = "https://docs.rs/agent-orchestrator-sdk"
homepage = "https://github.com/toreleon/rust-agent-sdk"
repository = "https://github.com/toreleon/rust-agent-sdk"
keywords = ["agent", "llm", "multi-agent", "orchestration", "ai"]
categories = ["api-bindings", "asynchronous"]
include = [
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "docs/**",
    "src/**",
]

[lib]
name = "agent_sdk"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File locking
fs2 = "0.4"

# File patterns
glob = "0.3"
scraper = "0.23"

# Encoding detection (Shift-JIS, EUC-JP, etc.)
encoding_rs = "0.8"

# Graph algorithms (task dependencies)
petgraph = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
dotenvy = "0.15"
dirs = "5"

# Language Server Protocol (types only, transport is handled by this crate)
lsp-types = "0.95"

[dev-dependencies]
tempfile = "3"
