[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP client (for LLM providers)
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File locking
fs2 = "0.4"

# File patterns
glob = "0.3"
scraper = "0.23"

# Encoding detection (Shift-JIS, EUC-JP, etc.)
encoding_rs = "0.8"

# Graph algorithms (task dependencies)
petgraph = "0.6"

# CLI
clap = { version = "4", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
dotenvy = "0.15"
dirs = "5"

# Language Server Protocol (types only, transport is handled by this crate)
lsp-types = "0.95"

# Testing
tempfile = "3"

# Workspace crates
sdk-core = { path = "crates/sdk-core" }
sdk-llm = { path = "crates/sdk-llm" }
sdk-protocols = { path = "crates/sdk-protocols" }
sdk-task = { path = "crates/sdk-task" }
sdk-tools = { path = "crates/sdk-tools" }
sdk-agent = { path = "crates/sdk-agent" }
sdk-cli = { path = "crates/sdk-cli" }

