[package]
name = "sdk-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "CLI helpers for agent-orchestrator-sdk"

[dependencies]
sdk-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = { workspace = true }
