[package]
name = "sdk-llm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "LLM provider clients for agent-orchestrator-sdk"

[dependencies]
sdk-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
