[package]
name = "sdk-protocols"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "MCP and LSP protocol clients for agent-orchestrator-sdk"

[dependencies]
sdk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }
