[package]
name = "sdk-task"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
description = "Task store and mailbox for agent-orchestrator-sdk"

[dependencies]
sdk-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = { workspace = true }
fs2 = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
